--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       name: 'AliceInCradle Wiki',
       loadNavbar: true,
       loadSidebar: true,
-      subMaxLevel: 2,
+      subMaxLevel: 6,
       auto2top: true,
       relativePath: false,
       themeColor: '#ff6666',
@@ -34,7 +34,7 @@
         paths: 'auto',
         placeholder: 'Enter to Search...',
         noData: 'Not Found',
-        namespace: 'wiki',
+        namespace: 'wiki'
       },
 
       plugins: [
