--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="AliceInCradle Wiki">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="https//aliceincradle.org/wiki/docsify/themes/css/vue.min.css">
+  <link rel="stylesheet" href="//aliceincradle.org/wiki/docsify/themes/css/vue.min.css">
   <link rel="stylesheet" href="assets/css/dark.css" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="assets/css/common.css">
   <meta name="theme-color" content="#339900">
 </head>
 <body>
   <div id="app">Loading...</div>
-  <script src="https//aliceincradle.org/wiki/docsify/js/docsify.min.js"></script>
+  <script src="//aliceincradle.org/wiki/docsify/js/docsify.min.js"></script>
   <script src="assets/js/docsify-edit-on-github.1.0.3.min.js"></script>
   <script>
     window.$docsify = {
@@ -45,8 +45,8 @@
     }
   </script>
   
-  <script src="https//aliceincradle.org/wiki/docsify/plugins/search.min.js"></script>
-  <script src="https//aliceincradle.org/wiki/docsify/plugins/emoji.min.js"></script>
-  <script src="https//aliceincradle.org/wiki/docsify/plugins/zoom-image.min.js"></script>
+  <script src="//aliceincradle.org/wiki/docsify/plugins/search.min.js"></script>
+  <script src="//aliceincradle.org/wiki/docsify/plugins/emoji.min.js"></script>
+  <script src="//aliceincradle.org/wiki/docsify/plugins/zoom-image.min.js"></script>
 </body>
 </html>
