--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/docsify/themes/css/vue.min.css">
   <link rel="stylesheet" href="assets/css/dark.css" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="assets/css/common.css">
-  <meta name="theme-color" content="#339900">
+  <meta name="theme-color" content="#ff6666">
 </head>
 <body>
   <div id="app">Loading...</div>
