--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         paths: 'auto',
         placeholder: 'Enter to Search...',
         noData: 'Not Found',
+        depth: 6,
       },
 
       plugins: [
