--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
   <script src="assets/docsify/plugins/search.min.js"></script>
   <script src="assets/docsify/plugins/emoji.min.js"></script>
   <script src="assets/docsify/plugins/zoom-image.min.js"></script>
+  <script src="assets/docsify/plugins/external-script.min.js"></script>
 </body>
 </html>
