--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AliceInCradle Wiki</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="AliceInCradle Wiki">
+  <meta name="description" content="Here is the Wiki of ACT game AliceInCradle">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="assets/docsify/themes/css/vue.min.css">
   <link rel="stylesheet" href="assets/css/dark.css" media="(prefers-color-scheme: dark)">
