--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
   <link rel="stylesheet" href="assets/css/dark.css" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="assets/css/common.css">
   <meta name="theme-color" content="#ff6666">
+  <style type="text/css">
+    table tr:first-child {
+			text-align: center;
+			font-weight: bold;
+		}
+  </style>
 </head>
 <body>
   <div id="app">Loading...</div>
-  <script src="assets/load-xlsx/xlsx-import.js"></script>
+  <script src="assets/load-xlsx/main.js"></script>
+  <script src="assets/load-xlsx/core.js"></script>
   <script src="assets/docsify/js/docsify.min.js"></script>
   <script src="assets/js/docsify-edit-on-github.1.0.3.min.js"></script>
   <script>
