--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
   <div id="app">Loading...</div>
-  <script src="assets/load-xlsx/main.js"></script>
-  <script src="assets/load-xlsx/core.js"></script>
+  <script type="text/javascript" src="assets/load-xlsx/main.js"></script>
+  <script type="text/javascript" src="assets/load-xlsx/core.js"></script>
   <script src="assets/docsify/js/docsify.min.js"></script>
   <script src="assets/js/docsify-edit-on-github.1.0.3.min.js"></script>
   <script>
