--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <meta name="theme-color" content="#ff6666">
   <style type="text/css">
     table tr:first-child {
-			text-align: center;
-			font-weight: bold;
-		}
+	text-align: center;
+	font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <div id="app">Loading...</div>
-  <script type="text/javascript" src="assets/load-xlsx/main.js"></script>
-  <script type="text/javascript" src="assets/load-xlsx/core.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/core.js"></script>
   <script src="assets/docsify/js/docsify.min.js"></script>
   <script src="assets/js/docsify-edit-on-github.1.0.3.min.js"></script>
   <script>
