--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 <body>
   <div id="app">Loading...</div>
   <script type="text/javascript" src="assets/xlsx-loader/main.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-1.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-2.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-3.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-4.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-5.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-6.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-7.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-8.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-9.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main-10.js"></script>
   <script type="text/javascript" src="assets/xlsx-loader/core.js"></script>
   <script src="assets/docsify/js/docsify.min.js"></script>
   <script src="assets/js/docsify-edit-on-github.1.0.3.min.js"></script>
