--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/common.css">
   <meta name="theme-color" content="#ff6666">
   <style type="text/css">
-    table tr:first-child {
+    table alt=excel tr:first-child {
 	text-align: center;
 	font-weight: bold;
     }
@@ -19,6 +19,22 @@
 </head>
 <body>
   <div id="app">Loading...</div>
+  <script type="text/javascript" src="assets/xlsx-loader/num/01.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/02.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/03.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/04.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/05.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/06.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/07.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/08.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/09.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/10.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/11.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/12.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/13.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/14.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/num/15.js"></script>
+  <script type="text/javascript" src="assets/xlsx-loader/main.js"></script>
   <script type="text/javascript" src="assets/xlsx-loader/core.js"></script>
   <script src="assets/docsify/js/docsify.min.js"></script>
   <script src="assets/js/docsify-edit-on-github.1.0.3.min.js"></script>
