--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/common.css">
   <meta name="theme-color" content="#ff6666">
   <style type="text/css">
-    #excel table tr:first-child {
+    .excel table tr:first-child {
 	text-align: center;
 	font-weight: bold;
     }
